--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -732,14 +732,10 @@ margin: 10px;
     justify-content: center;
     background-color: #f1f2f3;
     border-radius: 10px;
-    /* margin-bottom: inherit; */
-    /* bottom: 0px; */
-    /* position: fixed; */
-    /* top: 110px; */
     right: 0px;
-    /* z-index: 10; */
     padding: 10px;
     margin-bottom: 10px;
+    border: solid 1px #a09e9e;
    }
    .legendaH5Check{
     margin-inline-start: auto;
@@ -747,4 +743,19 @@ margin: 10px;
     display: flex;
     font-size: 0.9rem;
     color:#2ccd23
+}
+
+.divParabens{
+    background-color: orange; 
+    color: #fff;
+    margin: auto;
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    font-family: var(--fontPadrao);
+    height: 40px;
+    align-items: center;
+}
+.H5Parabens{
+    font-size: 14px;
 }
