--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -759,3 +759,15 @@ margin: 10px;
 .H5Parabens{
     font-size: 14px;
 }
+
+.divLogossl{
+   
+    justify-content: center;
+   
+    text-align: center;
+    margin-top: 5px;
+}
+.certifidado1{
+    height: 190px;
+    width: 250px;
+}
