--- a/src/pages/sobre/sobre.module.css
+++ b/src/pages/sobre/sobre.module.css
@@ -1,18 +1,46 @@
 .barraCabecalho{
-    height: 200px;
+    height: 300px;
     width: 100%;
     /* background-color: #116582; */
     display: flex;
     color: #fff;
     flex-wrap: wrap;
     text-align: center;
-    background: #116582;
+    background: #55acf0b3;
+   
     
 }
 .legendaCabecalho{
     margin: auto;
     justify-content: center;
     font-size: 2rem;
-    margin-bottom: 2%;
+    /* margin-bottom: 2%; */
     font-family: var(--fontPadrao);
+  
+}
+
+.subtituloCabecalho{
+    margin: auto;
+    justify-content: center;
+    font-size: 1rem;
+    /* margin-bottom: 2%; */
+    font-family: var(--fontPadrao);
+}
+
+.divTitleSubTit{
+    margin: auto;
+    justify-content: center;
+    margin-top: 130px;
+}
+
+
+.botaoPlantar{
+    margin: 10px;
+    background-color: #2F2F2F;
+    border-color: #2F2F2F
+}
+
+.botaoPlantar:hover{
+    background-color: var(--secundaryTom1-color3);
+    border-color: var(--secundaryTom1-color3);
 }
