--- a/src/pages/sobre/sobre.module.css
+++ b/src/pages/sobre/sobre.module.css
@@ -19,6 +19,12 @@
   
 }
 
+.divQuemsomos{
+   margin: auto;
+    text-align: center;
+    width: 80%;
+}
+
 .subtituloCabecalho{
     margin: auto;
     justify-content: center;
