--- a/src/pages/sobre/sobre.module.css
+++ b/src/pages/sobre/sobre.module.css
@@ -151,18 +151,22 @@
 }
 .Icon2{
     margin-right: 5px;
+    margin-left: 10px;
     color: #040404;
 }
 .Icon3{
     margin-right: 5px;
+    margin-left: 10px;
     color: #118222;
 }
 .Icon4{
     margin-right: 5px;
+    margin-left: 10px;
     color: #3ce812;
 }
 .Icon5{
     margin-right: 5px;
+    margin-left: 10px;
     color: #824011;
 }
 
