--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -5,6 +5,43 @@
 
 .containerTab{
     width: 100%;
-    background-color: rgba(241, 241, 241, 0.775);
+    /* background-color: rgba(241, 241, 241, 0.775); */
 }
 
+.paginaRestore{
+    background-color: rgb(237, 238, 238);
+    width: 100%;
+    height: 100vh;
+}
+
+.imgArvore{
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+.divUsuarios{
+    /* background-color: aquamarine; */
+    width: 70%;
+    height: 120px;
+    display: flex;
+    border-bottom: solid 1px #0d6efd;
+    margin: auto;
+    
+
+}
+.divDadosUsuario{
+    margin: auto;
+    justify-content: center;
+}
+
+.BotaoRest{
+    background-color: #459543 !important;
+    border-color: #459543 !important;
+}
+.BotaoRest:hover{
+    background-color: #2c612b !important;
+    border-color: #2c612b  !important;
+}
