--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -27,9 +27,12 @@
     width: 70%;
     height: 120px;
     display: flex;
-    border-bottom: solid 1px #0d6efd;
+    border-bottom: solid 1px #bed6f9;
+    /* border-left: solid 3px #0d6efd; */
     margin: auto;
-    
+    background-image: linear-gradient(to right,#bed6f9 1%, rgb(237, 238, 238) 50%  );
+    border-radius: 10px 10px 0px 10px;
+    margin-bottom: 10px;
 
 }
 .divDadosUsuario{
