--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -51,3 +51,9 @@
     border-color: #2c612b  !important;
     color: #ffffff !important;
 }
+
+.Busca{
+    width: 70%;
+    margin: auto;
+    margin-bottom: 12px;
+}
