--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -9,9 +9,10 @@
 }
 
 .paginaRestore{
-    background-color: rgb(237, 238, 238);
+    /* background-color: rgb(237, 238, 238); */
     width: 100%;
-    height: 100vh;
+    height: 70vh;
+    overflow: auto;
 }
 
 .imgArvore{
@@ -58,11 +59,12 @@
     margin-bottom: 12px;
 }
 
-/*Paginação*/
+/*Paginação*/ 
 .divPaginacao{
     margin-left: 20px;
     margin-top: 10px;
     bottom: 5px;
     justify-content: center;
     display: flex;
+    position: sticky;
 }
