--- a/src/pages/arvores/listarArvores/listaarvores.module.css
+++ b/src/pages/arvores/listarArvores/listaarvores.module.css
@@ -131,7 +131,8 @@
 }
 
 .CardArvore{
-    width: 20%;
+    /* width: 20%; */
+    width: 300px;
     /* height: 30%; */ 
     margin: 10px;
     /* cursor: pointer; */
