--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -1,5 +1,5 @@
 .divFundoRestauracao{
-    margin-top: 120px;
+    margin-top: 20px;
     
 }
 
@@ -8,12 +8,32 @@
     /* background-color: rgba(241, 241, 241, 0.775); */
 }
 
+.divBannerRestauracao{
+    width: 100%;
+    height: 300px;
+    background-color: #55acf0b3;
+    display: flex;
+    justify-content: center;
+    font-family: var(--fontPadrao);
+}
+.tituloBanner{
+    color:#ffff;
+    display: flex;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    /* margin-top: 120px; */
+}
+
+
 .paginaRestore{
     /* background-color: rgb(237, 238, 238); */
     width: 100%;
     height: 70vh;
     overflow: auto;
-    border-left: solid 1px #bed6f9;
+    border-left: solid 1px #55acf0b3;
 }
 
 .imgArvore{
@@ -29,19 +49,23 @@
     width: 70%;
     height: 120px;
     display: flex;
-    border-bottom: solid 1px #bed6f9;
+    border-bottom: solid 1px #55acf0b3;
     /* border-left: solid 3px #0d6efd; */
     margin: auto;
-    background-image: linear-gradient(to right,#bed6f9 1%, rgb(237, 238, 238) 50%  );
-    border-radius: 10px 10px 0px 10px;
+    background-image: linear-gradient(to right,#55acf0b3 1%, rgb(237, 238, 238) 50%  );
+    border-radius: 10px 0px 0px 10px;
     margin-bottom: 10px;
 
 }
 .divDadosUsuario{
     margin: auto;
     justify-content: center;
+    font-family: var(--fontPadrao);
+    color: #717171;
+} 
+.itemSpan{
+    color: #0d6efd;
 }
-
 .BotaoRest{
     background-color: rgb(237, 238, 238) !important;
     border-color: #459543 !important;
