--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -12,9 +12,10 @@
     width: 100%;
     height: 300px;
     background-color: #55acf0b3;
-    display: flex;
+    display: grid;
     justify-content: center;
     font-family: var(--fontPadrao);
+    margin-top: 90px;
 }
 .tituloBanner{
     color:#ffff;
@@ -27,6 +28,27 @@
     /* margin-top: 120px; */
 }
 
+.divBotoesBanner{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    width: 90%;
+
+}
+.botaoBanner{
+    margin: 5px;
+    background-color: transparent !important;
+    border-color: #0d6efd;
+    border-radius: 40px;
+    /* width: 250px; */
+    width: 60%;
+    color: #0d6efd;
+}
+.botaoBanner:hover{
+    background-color: #0d6efd !important;
+    /* border-color: #0d6efd; */
+
+}
 
 .paginaRestore{
     /* background-color: rgb(237, 238, 238); */
