--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -171,6 +171,7 @@
     .DivIndice{
         display: none;
     }
+
 }
 .DivIndice{
     height: 150px;
@@ -224,6 +225,9 @@
     .DivIndice{
         height: 150px;
     }
+
+    /* svg{font-weight:bold;max-width:1000px;height:350px;} */
+   
 }
 
 
@@ -375,4 +379,4 @@
   margin:0;padding:0;height:100%;
   font-size: 90px;
 }
-.svg{font-weight:bold;max-width:1000px;height:350px;}
+.svg{font-weight:bold;max-width:100%;height:350px;}
