--- a/src/pages/hist_restauracao/restauracao.module.css
+++ b/src/pages/hist_restauracao/restauracao.module.css
@@ -183,6 +183,14 @@
     margin-right: 10px;
 }
 
+.botaoCarregamento{
+    display: block;
+    width: 50%;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+    z-index: 15;
+}
 
 @media (max-width: 967px) {
     .divUsuarios{
