--- a/src/components/cards/cardCadUser/card.module.css
+++ b/src/components/cards/cardCadUser/card.module.css
@@ -15,7 +15,7 @@
 }
 
 
-.OpcaoCad{
+/* .OpcaoCad{
     
     --bs-nav-pills-link-active-bg: #55ACEE;
 }
@@ -30,7 +30,7 @@
 --bs-btn-hover-bg: #427fad;
 --bs-btn-hover-border-color: #427fad;
 
-}
+} */
 
 .formPapel{
     display: flex;
