--- a/src/pages/plantar/plantar.module.css
+++ b/src/pages/plantar/plantar.module.css
@@ -459,6 +459,10 @@ color: #55ACEE
 }
 
 /* ===============ESTILO DOS CARDS ARVORES=============== */
+.divEscolhaLocal{
+    cursor: grab;
+}
+
 .divItens1{
     /* height: 400px;
     overflow-y: auto; */
